--- a/html/index.html
+++ b/html/index.html
@@ -16,29 +16,32 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="container margin-basic">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <div class="container-fluid margin-basic">
 
             <a href="index.html">
                 <img id="logo" src="../images/logo.svg" alt="logo">
             </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <button class="navbar-toggler margin-right" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="charts.html">Charts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="about.html">About</a>
                     </li>
                 </ul>
+
+                <a id="login-button" class="btn margin-right" href="#" role="button">Sign in</a>
+
             </div>
 
         </div>
@@ -78,10 +81,10 @@
 
             <div class="col-md-4 p-3">
                 <div class="div-inner">
-                    <img id="album" src="../images/sleepy-hallow-2055.jpg" alt="sleepy hallow album 2055">
+                    <img id="album" src="../images/sleepy-hallow-still-sleep.jpg" alt="sleepy hallow album still sleep?">
 
                     <h3>
-                        New album 2055 from Sleepy Hallow out now !
+                        New album "Still Sleep?" from Sleepy Hallow out now !
                     </h3>
                 </div>
             </div>
