Padding charts fix

--- a/html/charts.html
+++ b/html/charts.html
@@ -70,10 +70,12 @@
         </div>
 
         <div class="col-md-12 p-3">
-            <div class="div-inner table-responsive">
+            <div class="div-inner table-responsive padding-20">
                 <h2>
                     TOP 10 Albums
                 </h2>
+
+                <hr>
 
                 <table class="table">
                     <thead>
@@ -201,10 +203,12 @@
         </div>
 
         <div class="col-md-12 p-3">
-            <div class="div-inner table-responsive">
+            <div class="div-inner table-responsive padding-20">
                 <h2>
                     TOP 10 Songs
                 </h2>
+
+                <hr>
 
                 <table class="table">
                     <thead>
