Sign in and register forms

--- a/html/about.html
+++ b/html/about.html
@@ -38,7 +38,9 @@
                     </li>
                 </ul>
 
-                <a id="login-button" class="btn margin-right" href="#" role="button">Sign in</a>
+                <a id="login-button" class="btn margin-right" href="signin.html" role="button">Sign in</a>
+
+                <a id="register-button" class="btn margin-right" href="register.html" role="button">Register</a>
 
             </div>
 
