--- a/html/charts.html
+++ b/html/charts.html
@@ -40,7 +40,9 @@
                     </li>
                 </ul>
 
-                <a id="login-button" class="btn margin-right" href="#" role="button">Sign in</a>
+                <a id="login-button" class="btn margin-right" href="signin.html" role="button">Sign in</a>
+
+                <a id="register-button" class="btn margin-right" href="register.html" role="button">Register</a>
 
             </div>
 
@@ -51,21 +53,24 @@
 
         <div class="col-md-12 p-3">
             <div class="div-inner">
-                <div class="">
 
-                    <h2 class="number-one-padding">1# Album this week</h2>
+
+                <div class="number-one-caption-padding">
+                    <h2>1# Album this week</h2>
                     <hr>
+                </div>
 
-                    <div class="row margin-off number-one-padding">
-                        <div class="col-sm-2 padding-off">
-                            <img class="number-one-image" src="../images/sleepy-hallow-still-sleep.jpg" alt="sleepy hallow still sleep">
-                        </div>
 
-                        <div class="col-sm-10 number-one-text">
-                            <h3 class="">Sleepy Hallow - Still Sleep ?</h3>
-                        </div>
+                <div class="row margin-off number-one-padding">
+                    <div class="col-sm-2 padding-off">
+                        <img class="number-one-image" src="../images/sleepy-hallow-still-sleep.jpg" alt="sleepy hallow still sleep">
+                    </div>
+
+                    <div class="col-sm-10 number-one-text">
+                        <h3>Sleepy Hallow - Still Sleep ?</h3>
                     </div>
                 </div>
+
             </div>
         </div>
 
@@ -184,10 +189,11 @@
 
         <div class="col-md-12 p-3">
             <div class="div-inner">
-                <div class="">
 
-                    <h2 class="number-one-padding">1# Song this week</h2>
-                    <hr>
+                    <div class="number-one-caption-padding">
+                        <h2>1# Song this week</h2>
+                        <hr>
+                    </div>
 
                     <div class="row margin-off number-one-padding">
                         <div class="col-sm-2 padding-off">
@@ -195,10 +201,10 @@
                         </div>
 
                         <div class="col-sm-10 number-one-text">
-                            <h3 class="">Pop Smoke - Dior</h3>
+                            <h3>Pop Smoke - Dior</h3>
                         </div>
                     </div>
-                </div>
+
             </div>
         </div>
 
