New Songs page with implemented CRUD operations

--- a/html/albums.html
+++ b/html/albums.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/style.css">
 
     <meta charset="UTF-8">
-    <title>Sign in | Music Charts</title>
+    <title>Albums | Music Charts</title>
 </head>
 <body>
 
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="../php/songs.php">Songs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="albums.html">Albums</a>
+                        <a class="nav-link active" href="albums.html">Albums</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="charts.html">Charts</a>
@@ -44,7 +44,7 @@
                     </li>
                 </ul>
 
-                <a id="login-button" class="btn margin-right active" href="signin.html" role="button">Sign in</a>
+                <a id="login-button" class="btn margin-right" href="signin.html" role="button">Sign in</a>
 
                 <a id="register-button" class="btn margin-right" href="register.html" role="button">Register</a>
 
@@ -52,52 +52,6 @@
 
         </div>
     </nav>
-
-    <div class="margin-basic div-form">
-
-        <div class="row margin-off">
-
-            <div class="col-md-3 p-3">
-
-            </div>
-
-            <div class="col-md-6 p-3">
-
-                <div class="div-inner">
-                    <div class="padding-10">
-                        <h2>Sign in</h2>
-                        <hr>
-
-                        <form class="sign-in-form">
-                            <div>
-                                <label for="login" class="form-label">Login</label>
-                                <input type="text" class="form-control form-control-lg mb-3" id="login">
-                            </div>
-                            <div>
-                                <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control form-control-lg mb-3" id="password">
-                            </div>
-
-                            <button type="submit" class="btn btn-lg btn-dark">Sign in</button>
-                        </form>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="col-md-3 p-3">
-
-            </div>
-
-        </div>
-
-    </div>
-
-    <footer class="text-center">
-        <div class="bg-dark div-footer">
-            © 2021 Vladimír Kuderavý
-        </div>
-    </footer>
 
 </body>
 </html>
