--- a/html/register.html
+++ b/html/register.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="../css/style.css">
 
     <meta charset="UTF-8">
-    <title>Music Charts | Register</title>
+    <title>Register | Music Charts</title>
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid margin-basic">
 
             <a href="index.html">
@@ -31,6 +31,12 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="../php/songs.php">Songs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="albums.html">Albums</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="charts.html">Charts</a>
                     </li>
                     <li class="nav-item">
@@ -40,7 +46,7 @@
 
                 <a id="login-button" class="btn margin-right" href="signin.html" role="button">Sign in</a>
 
-                <a id="register-button" class="btn margin-right" href="#" role="button">Register</a>
+                <a id="register-button" class="btn margin-right active" href="register.html" role="button">Register</a>
 
             </div>
 
