Registration, sign in and logout functionality

--- a/html/charts.html
+++ b/html/charts.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid margin-basic">
 
-            <a href="index.html">
+            <a href="../php/index.php">
                 <img id="logo" src="../images/logo.svg" alt="logo">
             </a>
 
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="../php/index.php">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../php/songs.php">Songs</a>
@@ -46,9 +46,9 @@
                     </li>
                 </ul>
 
-                <a id="login-button" class="btn margin-right" href="signin.html" role="button">Sign in</a>
+                <a id="login-button" class="btn margin-right" href="../php/signin.php" role="button">Sign in</a>
 
-                <a id="register-button" class="btn margin-right" href="register.html" role="button">Register</a>
+                <a id="register-button" class="btn margin-right" href="../php/register.php" role="button">Register</a>
 
             </div>
 
@@ -97,7 +97,7 @@
                         <th colspan="2" scope="col">Votes</th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="tbody-chart">
                     <tr>
                         <th scope="row">1</th>
                         <td>Still Sleep?</td>
@@ -231,7 +231,7 @@
                         <th colspan="2" scope="col">Votes</th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="tbody-chart">
                     <tr>
                         <th scope="row">1</th>
                         <td>Dior</td>
