--- a/html/albums.html
+++ b/html/albums.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid margin-basic">
 
-            <a href="index.html">
+            <a href="../php/index.php">
                 <img id="logo" src="../images/logo.svg" alt="logo">
             </a>
 
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="../php/index.php">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../php/songs.php">Songs</a>
@@ -44,9 +44,9 @@
                     </li>
                 </ul>
 
-                <a id="login-button" class="btn margin-right" href="signin.html" role="button">Sign in</a>
+                <a id="login-button" class="btn margin-right" href="../php/signin.php" role="button">Sign in</a>
 
-                <a id="register-button" class="btn margin-right" href="register.html" role="button">Register</a>
+                <a id="register-button" class="btn margin-right" href="../php/register.php" role="button">Register</a>
 
             </div>
 
